...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NewEntryActivity"
    android:fitsSystemWindows="true" >

    <EditText
        android:id="@+id/editText_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:gravity="top|start"
        android:hint="amount"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/editText_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_amount"
        android:ems="10"
        android:hint="yyyy-mm-dd"
        android:inputType="date" />
    <EditText
        android:id="@+id/editText_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_date"
        android:hint="details"
        android:ems="10"
        android:inputType="text" />

    <segmented_control.widget.custom.android.com.segmentedcontrol.SegmentedControl
        android:id="@+id/control_incomeOrExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_category"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
...
    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="Submit" />

    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_details"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"/>

    <Switch
        android:id="@+id/switch_bad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/control_incomeOrExpense"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/bad" />

    <Switch
        android:id="@+id/switch_recurring"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switch_bad"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/recurring_entry" />
...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/months"
            android:inputType="number" />

        <EditText
            android:id="@+id/recurring_weeks"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/weeks"
            android:inputType="number" />

...
